# morty-chess

./: .gitignore  BUCK  CMakeLists.txt  README.md
Executable Archive/: Seanet-0.4  Seanet-1.0.1-NO_TT_EVAL  info.text
Learning/: datum.cpp  datum.hpp  main.cpp  neuralnet.cpp  neuralnet.hpp  perceptron.cpp  perceptron.hpp  weight-records.text
Seanet/: board.cpp  board.hpp  defs.h  evaluator.cpp  evaluator.hpp  hash.hpp  main.cpp  movegenerator.hpp  search.cpp  search.hpp  searchcontroller.cpp  searchcontroller.hpp  util.hpp
Seanet.xcodeproj/: project.pbxproj
Seanet.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TestSeanet/: Silver-Suite.text  main.cpp  zobrist-checking.text
app/exe/: Seanet-0.3  Seanet-1.0  Seanet-1.0.1
app/include/: defs.hpp  hash.hpp  movegenerator.hpp  search.hpp  searchcontroller.hpp  state.hpp  uci.hpp  util.hpp
app/new_tests/: perft.cpp
app/old_tests/: main.cpp
app/src/: evaluator.cpp  hash.cpp  main.cpp  movegenerator.cpp  search.cpp  searchcontroller.cpp  state.cpp  uci.cpp  util.cpp
app/test/: perft.cpp  suites.cpp
app/tests/: main.cpp  san-checking.text
core/: BUCK
core/include/: evaluator.hpp  hash.hpp  movegenerator.hpp  search.hpp  searchcontroller.hpp  state.hpp  uci.hpp  util.hpp
core/src/: hash.cpp  movegenerator.cpp  search.cpp  searchcontroller.cpp  state.cpp  uci.cpp  util.cpp
core/test/: BUCK  main.cpp  perft.cpp  selftournament.cpp  suites.cpp
core/test/res/: Sune-Larson-Endgame.text
server/: app
test-build/: CMakeCache.txt  Makefile  app  cmake_install.cmake
(+8 files in other folders)
